fix: loading screen fits on mobile devices now

--- a/index.css
+++ b/index.css
@@ -50,7 +50,8 @@
     display: flex;
     text-align: center;
     justify-content: space-evenly;
-    margin-top: 20vh;
+    margin-top: 10vh;
+    flex-direction: column;
 }
 
 body,
